--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sueño de Transilvania</title>
+
+  <!-- Código de Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8208696639870988"
+     crossorigin="anonymous"></script>
+
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div class="overlay"></div>
   <header>
     <img src="assets/maxim1.jpg" alt="Logo Sueño de Transilvania" class="logo" />
     <nav>
