--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <section id="contacto" class="section dark">
     <h2>Contacto y Colaboraciones</h2>
     <p>Para propuestas, colaboraciones o prensa, escríbeme a:</p>
-    <p><a href="mailto:suenodetransilvania@gmail.com">suenodetransilvania@gmail.com</a></p>
+    <p><a href="mailto:flaviomaxim@gmail.com">flaviomaxim@gmail.com</a></p>
   </section>
 
   <footer>
