--- a/index.html
+++ b/index.html
@@ -11,6 +11,35 @@
 
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&display=swap" rel="stylesheet">
+  <style>
+    /* Ajuste para que el menú se centre y no se desborde en pantallas pequeñas */
+    nav {
+      width: 100%;
+    }
+
+    nav ul {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      padding: 0;
+      margin: 0;
+    }
+
+    nav li {
+      margin: 0 0.5rem;
+    }
+
+    nav a {
+      font-size: 1rem;
+    }
+
+    @media screen and (max-width: 768px) {
+      nav ul {
+        flex-direction: column;
+        align-items: center;
+      }
+    }
+  </style>
 </head>
 <body>
   <div class="overlay"></div>
