--- a/index.html
+++ b/index.html
@@ -58,11 +58,20 @@
     </nav>
   </header>
 
-  <section class="hero">
-    <h1>Sueño de Transilvania</h1>
-    <p>Un universo creado por Maxim Capalnas Flaviu</p>
-    <img src="assets/maxim2.jpg" alt="Maxim en Harley" class="imagen-principal" />
-  </section>
+  
+
+<section id="videos" class="section dark">
+  <h2>Últimos vídeos</h2>
+  <div class="video-gallery">
+    <iframe src="https://www.youtube.com/embed/k5_aSunleOM" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/ySV4ItuitYY" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/9PAYsUHLO2s" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/Hm_9tu9nIpI" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/19upvqws1kM" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/ddWvxSjvt_k" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/Xof4izfiMIk" frameborder="0" allowfullscreen></iframe>
+  </div>
+</section>
 
   <section id="musica" class="section dark">
     <h2>Canciones</h2>
@@ -103,3 +112,4 @@
   </footer>
 </body>
 </html>
+
