--- a/index.html
+++ b/index.html
@@ -5,111 +5,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sueño de Transilvania</title>
 
-  <!-- Código de Google AdSense -->
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+
+  <!-- Google AdSense -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8208696639870988"
      crossorigin="anonymous"></script>
 
+  <!-- Estilos -->
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&display=swap" rel="stylesheet">
-  <style>
-    /* Ajuste para que el menú se centre y no se desborde en pantallas pequeñas */
-    nav {
-      width: 100%;
-    }
-
-    nav ul {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      padding: 0;
-      margin: 0;
-    }
-
-    nav li {
-      margin: 0 0.5rem;
-    }
-
-    nav a {
-      font-size: 1rem;
-    }
-
-    @media screen and (max-width: 768px) {
-      nav ul {
-        flex-direction: column;
-        align-items: center;
-      }
-    }
-  </style>
 </head>
 <body>
-  <div class="overlay"></div>
-  <header>
-    <img src="assets/maxim1.jpg" alt="Logo Sueño de Transilvania" class="logo" />
-    <nav>
-      <button class="menu-toggle" onclick="document.body.classList.toggle('menu-open')">
-        <span class="menu-icon"></span>
-      </button>
-      <ul class="nav-links">
-        <li><a href="#musica">Música</a></li>
-        <li><a href="#creador">Creador</a></li>
-        <li><a href="#galeria">Galería</a></li>
-        <li><a href="#contacto">Contacto</a></li>
-      </ul>
+  <header class="main-header">
+    <img src="assets/logo-suenodetransilvania.png" alt="Logo Sueño de Transilvania" class="logo-principal" />
+    <nav class="main-nav">
+      <a href="#creador">Creador</a>
+      <a href="#galeria">Galería</a>
+      <a href="#contacto">Contacto</a>
     </nav>
   </header>
 
-  
-
-<section id="videos" class="section dark">
-  <h2>Últimos vídeos</h2>
-  <div class="video-gallery">
-    <iframe src="https://www.youtube.com/embed/k5_aSunleOM" frameborder="0" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/ySV4ItuitYY" frameborder="0" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/9PAYsUHLO2s" frameborder="0" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/Hm_9tu9nIpI" frameborder="0" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/19upvqws1kM" frameborder="0" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/ddWvxSjvt_k" frameborder="0" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/Xof4izfiMIk" frameborder="0" allowfullscreen></iframe>
-  </div>
-</section>
-
-  <section id="musica" class="section dark">
-    <h2>Canciones</h2>
-    <p>Escucha las creaciones musicales de Sueño de Transilvania:</p>
-    <div class="links">
-      <a href="https://www.youtube.com/@sueno_de_transilvania" target="_blank">YouTube</a>
-      <a href="https://open.spotify.com/artist/0soBWWidG5nKvEyaBp07QJ" target="_blank">Spotify</a>
-    </div>
-  </section>
-
-  <section id="creador" class="section">
-    <h2>Sobre el creador</h2>
-    <p>Maxim Capalnas Flaviu es el alma detras de Sueño de Transilvania. Creador de contenido histórico y musical, combina tecnología de inteligencia artificial con inspiración medieval y visual para llevar a su audiencia en un viaje sonoro y visual único. Más de 20 años de experiencia creativa, ahora también como Partner de YouTube y colaborador de AdSense.</p>
-    <img src="assets/maxim10.jpg" alt="Maxim Capalnas Flaviu" class="imagen-creador" />
-  </section>
-
-  <section id="galeria" class="section dark">
-    <h2>Galería</h2>
-    <div class="galeria">
-      <img src="assets/maxim3.jpg" alt="Maxim retrato">
-      <img src="assets/maxim4.jpg" alt="Maxim en Harley lateral">
-      <img src="assets/maxim5.jpg" alt="Maxim fondo rojo">
-      <img src="assets/maxim6.jpg" alt="Maxim con gafas y logo">
-      <img src="assets/maxim7.jpg" alt="Maxim camiseta Madrid">
-      <img src="assets/maxim8.jpg" alt="Maxim chaleco FLAMAX">
-      <img src="assets/maxim9.jpg" alt="Maxim cuerpo entero AC/DC">
-    </div>
-  </section>
-
-  <section id="contacto" class="section dark">
-    <h2>Contacto y Colaboraciones</h2>
-    <p>Para propuestas, colaboraciones o prensa, escríbeme a:</p>
-    <p><a href="mailto:flaviomaxim@gmail.com">flaviomaxim@gmail.com</a></p>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Sueño de Transilvania. Todos los derechos reservados.</p>
-  </footer>
+  <main>
+    <section class="videos">
+      <h2>Últimos vídeos</h2>
+      <div class="video-grid">
+        <iframe src="https://www.youtube.com/embed/k5_aSunleOM" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/ySV4ItuitYY" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/9PAYsUHLO2s" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/Hm_9tu9nIpI" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/19upvqws1kM" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/ddWvxSjvt_k" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/Xof4izfiMIk" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/BN18fQWVlXA" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/sR1fvngT7Tw" frameborder="0" allowfullscreen></iframe>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
-
