--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section class="videos">
       <h2>Últimos vídeos</h2>
       <div class="video-grid">
-        <!-- Video 1 -->
+        <!-- VIDEO EJEMPLO -->
         <div class="video-item">
           <iframe src="https://www.youtube.com/embed/k5_aSunleOM" frameborder="0" allowfullscreen></iframe>
           <div class="video-buttons">
@@ -40,7 +40,7 @@
           <div class="video-info letra"><p><strong>Letra:</strong> Letra canción 1</p></div>
           <div class="video-info historia"><p><strong>Historia:</strong> Historia canción 1</p></div>
         </div>
-        <!-- Video 2 -->
+
         <div class="video-item">
           <iframe src="https://www.youtube.com/embed/ySV4ItuitYY" frameborder="0" allowfullscreen></iframe>
           <div class="video-buttons">
@@ -50,7 +50,7 @@
           <div class="video-info letra"><p><strong>Letra:</strong> Letra canción 2</p></div>
           <div class="video-info historia"><p><strong>Historia:</strong> Historia canción 2</p></div>
         </div>
-        <!-- Video 3 -->
+
         <div class="video-item">
           <iframe src="https://www.youtube.com/embed/9PAYsUHLO2s" frameborder="0" allowfullscreen></iframe>
           <div class="video-buttons">
@@ -60,7 +60,7 @@
           <div class="video-info letra"><p><strong>Letra:</strong> Letra canción 3</p></div>
           <div class="video-info historia"><p><strong>Historia:</strong> Historia canción 3</p></div>
         </div>
-        <!-- Video 4 -->
+
         <div class="video-item">
           <iframe src="https://www.youtube.com/embed/Hm_9tu9nIpI" frameborder="0" allowfullscreen></iframe>
           <div class="video-buttons">
@@ -70,7 +70,7 @@
           <div class="video-info letra"><p><strong>Letra:</strong> Letra canción 4</p></div>
           <div class="video-info historia"><p><strong>Historia:</strong> Historia canción 4</p></div>
         </div>
-        <!-- Video 5 -->
+
         <div class="video-item">
           <iframe src="https://www.youtube.com/embed/19upvqws1kM" frameborder="0" allowfullscreen></iframe>
           <div class="video-buttons">
@@ -80,7 +80,7 @@
           <div class="video-info letra"><p><strong>Letra:</strong> Letra canción 5</p></div>
           <div class="video-info historia"><p><strong>Historia:</strong> Historia canción 5</p></div>
         </div>
-        <!-- Video 6 -->
+
         <div class="video-item">
           <iframe src="https://www.youtube.com/embed/ddWvxSjvt_k" frameborder="0" allowfullscreen></iframe>
           <div class="video-buttons">
@@ -90,7 +90,7 @@
           <div class="video-info letra"><p><strong>Letra:</strong> Letra canción 6</p></div>
           <div class="video-info historia"><p><strong>Historia:</strong> Historia canción 6</p></div>
         </div>
-        <!-- Video 7 -->
+
         <div class="video-item">
           <iframe src="https://www.youtube.com/embed/Xof4izfiMIk" frameborder="0" allowfullscreen></iframe>
           <div class="video-buttons">
@@ -100,7 +100,7 @@
           <div class="video-info letra"><p><strong>Letra:</strong> Letra canción 7</p></div>
           <div class="video-info historia"><p><strong>Historia:</strong> Historia canción 7</p></div>
         </div>
-        <!-- Video 8 -->
+
         <div class="video-item">
           <iframe src="https://www.youtube.com/embed/BN18fQWVlXA" frameborder="0" allowfullscreen></iframe>
           <div class="video-buttons">
@@ -110,7 +110,7 @@
           <div class="video-info letra"><p><strong>Letra:</strong> Letra canción 8</p></div>
           <div class="video-info historia"><p><strong>Historia:</strong> Historia canción 8</p></div>
         </div>
-        <!-- Video 9 -->
+
         <div class="video-item">
           <iframe src="https://www.youtube.com/embed/sR1fvngT7Tw" frameborder="0" allowfullscreen></iframe>
           <div class="video-buttons">
