--- a/index.html
+++ b/index.html
@@ -20,16 +20,18 @@
   <header class="main-header">
     <img src="assets/logo-suenodetransilvania.png" alt="Logo Sueño de Transilvania" class="logo-principal" />
     <nav class="main-nav">
-      <a href="#creador">Creador</a>
-      <a href="#galeria">Galería</a>
-      <a href="#contacto">Contacto</a>
-    </nav>
+  <a href="quien.html">¿Quién es Sueño de Transilvania?</a>
+  <a href="#galeria">Galería</a>
+  <a href="#contacto">Contacto</a>
+</nav>
+
   </header>
 
   <main>
-    <section class="videos">
-      <h2>Canciones destacadas</h2>
-      <div class="video-grid">
+  <section class="videos">
+    <h2 class="intro-frase">“Canciones que cuentan historias, motos que rugen con alma. Bienvenido al Sueño de Transilvania.”</h2>
+
+    <div class="video-grid">
 
         <!-- Video 1 -->
         <div class="video-item">
