--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
   <!-- Google AdSense -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8208696639870988"
-     crossorigin="anonymous"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8208696639870988" crossorigin="anonymous"></script>
 
   <!-- Estilos -->
   <link rel="stylesheet" href="style.css" />
@@ -20,11 +19,11 @@
   <header class="main-header">
     <img src="assets/logo-suenodetransilvania.png" alt="Logo Sueño de Transilvania" class="logo-principal" />
     <nav class="main-nav">
-  <a href="quien.html">¿Quién es Sueño de Transilvania?</a>
-  <a href="#galeria">Galería</a>
-  <a href="#contacto">Contacto</a>
-</nav>
-
+      <a href="quien.html">Quién es Sueño de Transilvania</a>
+      <a href="contacto.html">Contacto</a>
+      <a href="https://www.youtube.com/channel/UCERqiUdNB_quNuERXF2JNDg" target="_blank">YouTube</a>
+      <a href="https://open.spotify.com/intl-es/artist/0soBWWidG5nKvEyaBp07QJ?si=0o8D7p5qQC-m38jIYmdyfg" target="_blank">Spotify</a>
+    </nav>
   </header>
 
   <main>
@@ -497,6 +496,14 @@
   </main>
 
   <script src="main.js"></script>
+<footer class="main-footer">
+  <p>&copy; <span id="year"></span> Sueño de Transilvania. Todas las canciones, letras, imágenes y contenidos son creaciones originales. Aunque se ha utilizado inteligencia artificial como herramienta de apoyo, todos los derechos de autor pertenecen exclusivamente a Maxim Capalnas Flaviu.</p>
+</footer>
+
+<script>
+  document.getElementById('year').textContent = new Date().getFullYear();
+</script>
+
 </body>
 </html>
 
