--- a/quien.html
+++ b/quien.html
@@ -1,45 +1,66 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quién es Sueño de Transilvania</title>
-
-  <!-- Estilos -->
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header class="main-header">
-    <img src="assets/logo-suenodetransilvania.png" alt="Logo Sueño de Transilvania" class="logo-principal" />
-    <nav class="main-nav">
-      <a href="index.html">Inicio</a>
-      <a href="quien.html">Quién es Sueño de Transilvania</a>
-      <a href="#contacto">Contacto</a>
-    </nav>
-  </header>
+    <header class="main-header">
+  <img src="assets/logo-suenodetransilvania.png" alt="Logo Sueño de Transilvania" class="logo-principal" />
+  <nav class="main-nav">
+    <a href="index.html">Inicio</a>
+    <a href="quien.html">Quién es</a>
+    <a href="contacto.html">Contacto</a>
+    <a href="https://open.spotify.com/intl-es/artist/0soBWWidG5nKvEyaBp07QJ?si=0o8D7p5qQC-m38jIYmdyfg" target="_blank">Spotify</a>
+    <a href="https://www.youtube.com/channel/UCERqiUdNB_quNuERXF2JNDg" target="_blank">YouTube</a>
+  </nav>
+</header>
 
-  <main>
-    <section class="videos">
-      <h2>¿Quién es Sueño de Transilvania?</h2>
-      <div class="section-content">
-        <p>
-          Soy <strong>Maxim Capalnas Flaviu</strong>, ingeniero de formación, nacido en el corazón de Transilvania,
-          pero profundamente enamorado de <strong>España y su historia</strong>. <br><br>
-          <strong>Sueño de Transilvania</strong> no es un grupo musical. Es un proyecto personal que nace de una pasión inmensa por la música, 
-          la historia y el mundo motero. Tras muchos años con este sueño en mente, he decidido hacerlo realidad usando 
-          todas las herramientas que hoy nos brinda la inteligencia artificial para componer música, escribir letras, crear vídeos 
-          y dar forma a una estética visual propia. <br><br>
-          Las <strong>Harley-Davidson</strong> no son solo motos: son parte de mi alma, y por eso su presencia es constante en mis canciones 
-          y vídeos. <br><br>
-          Este proyecto es mi forma de rendir homenaje a todo lo que amo: la épica de la historia española, los moteros, los sentimientos 
-          que nos forjan y nos mueven. Cada canción cuenta una historia, cada letra es un reflejo de una emoción, de una vivencia o de 
-          un ideal. <br><br>
-          <strong>Sueño de Transilvania</strong> es eso: un sueño que empezó hace años y que, por fin, se hace realidad.
-        </p>
-        <img src="assets/maxim-harley.jpg" alt="Maxim en su Harley" style="width:100%; max-width:600px; margin-top:2rem; border-radius:12px;" />
-      </div>
+  <main class="quien-main">
+    <h1>Quién es Sueño de Transilvania</h1>
+    <section class="quien-section">
+      <p>
+        Sueño de Transilvania no es un grupo. Es un proyecto personal que nace del corazón de Maxim Capalnas Flaviu. Ingeniero de formación, creador por vocación y apasionado por la historia de España, la música y el mundo motero.
+      </p>
+      <img src="assets/foto_galeria_1.png" alt="Maxim con fondo del logo" class="quien-img">
+
+      <p>
+        Aunque nací en el corazón de Transilvania, mi alma está profundamente enamorada de España. Con este proyecto quiero rendir homenaje a su historia, sus héroes y su cultura a través de canciones, letras y videoclips que nacen desde lo más profundo.
+      </p>
+      <img src="assets/foto_galeria_2.png" alt="Maxim con traje y logo" class="quien-img">
+
+      <p>
+        Sueño de Transilvania también representa mi pasión por las Harley-Davidson. La carretera, la libertad, el sonido del motor... Todo forma parte de la esencia de mis creaciones.
+      </p>
+      <img src="assets/foto_galeria_3.png" alt="Maxim en Harley con logo" class="quien-img">
+
+      <p>
+        Este sueño que comenzó hace años se ha hecho realidad gracias a las herramientas de inteligencia artificial, que me permiten transformar ideas y letras en música, y llevar a cabo una producción audiovisual completa desde mi estudio personal.
+      </p>
+      <img src="assets/foto_galeria_4.png" alt="Maxim en moto con fondo dorado" class="quien-img">
+
+      <p>
+        Gracias por formar parte de esta aventura.
+      </p>
     </section>
   </main>
+  <footer class="main-footer">
+  <p>&copy; <span id="year"></span> Sueño de Transilvania. Todas las canciones, letras, imágenes y contenidos son creaciones originales. Aunque se ha utilizado inteligencia artificial como herramienta de apoyo, todos los derechos de autor pertenecen exclusivamente a Maxim Capalnas Flaviu.</p>
+</footer>
+
+<script>
+  document.getElementById('year').textContent = new Date().getFullYear();
+</script>
+<footer class="main-footer">
+  <p>&copy; <span id="year"></span> Sueño de Transilvania. Todas las canciones, letras, imágenes y contenidos son creaciones originales. Aunque se ha utilizado inteligencia artificial como herramienta de apoyo, todos los derechos de autor pertenecen exclusivamente a Maxim Capalnas Flaviu.</p>
+</footer>
+
+<script>
+  document.getElementById('year').textContent = new Date().getFullYear();
+</script>
+
 </body>
 </html>
