politica privacidad añadida

--- a/index.html
+++ b/index.html
@@ -503,6 +503,10 @@
 <script>
   document.getElementById('year').textContent = new Date().getFullYear();
 </script>
+<footer class="footer">
+  <p>&copy; 2024 Sueño de Transilvania. Todos los derechos reservados.</p>
+  <p><a href="politica.html">Política de Privacidad y Derechos de Autor</a></p>
+</footer>
 
 </body>
 </html>
