--- a/quien.html
+++ b/quien.html
@@ -51,16 +51,15 @@
   <p>&copy; <span id="year"></span> Sueño de Transilvania. Todas las canciones, letras, imágenes y contenidos son creaciones originales. Aunque se ha utilizado inteligencia artificial como herramienta de apoyo, todos los derechos de autor pertenecen exclusivamente a Maxim Capalnas Flaviu.</p>
 </footer>
 
-<script>
-  document.getElementById('year').textContent = new Date().getFullYear();
-</script>
-<footer class="main-footer">
-  <p>&copy; <span id="year"></span> Sueño de Transilvania. Todas las canciones, letras, imágenes y contenidos son creaciones originales. Aunque se ha utilizado inteligencia artificial como herramienta de apoyo, todos los derechos de autor pertenecen exclusivamente a Maxim Capalnas Flaviu.</p>
-</footer>
+
 
 <script>
   document.getElementById('year').textContent = new Date().getFullYear();
 </script>
+<footer class="footer">
+  <p>&copy; 2024 Sueño de Transilvania. Todos los derechos reservados.</p>
+  <p><a href="politica.html">Política de Privacidad y Derechos de Autor</a></p>
+</footer>
 
 </body>
 </html>
