añadiendo niños de rusia

--- a/index.html
+++ b/index.html
@@ -492,6 +492,79 @@
   </div>
 </div>
 
+<div class="video-item">
+  <iframe src="https://www.youtube.com/embed/AHg89xJSSCw" title="Niños de Rusia" frameborder="0" allowfullscreen></iframe>
+  
+  <div class="video-buttons">
+    <button onclick="toggleSection(this, 'letra')">Letra</button>
+    <button onclick="toggleSection(this, 'historia')">Historia</button>
+  </div>
+
+  <div class="video-info letra">
+    <p><strong>Niños de Rusia</strong></p>
+    <p>
+      <br>
+      En un barco partieron, rumbo al horizonte,<br>
+      dejando su tierra, sus montes y el sol.<br>
+      Sus risas quedaban en un mar distante,<br>
+      y en sus ojos la pena de un país en dolor.<br><br>
+
+      <br>
+      Niños de Rusia, estrellas en la niebla,<br>
+      sus manos vacías, sus almas sin tregua.<br>
+      En tierras extrañas, crecerán sin cesar,<br>
+      pero en su corazón, España vivirá.<br><br>
+
+      <br>
+      Llegaron a tierras de nieve y metal,<br>
+      con palabras distintas, un frío glacial.<br>
+      En las aulas cantaban con un nuevo acento,<br>
+      pero en sus sueños, volvían al viento.<br><br>
+
+      <br>
+      Las cartas viajaban, llenas de esperanza,<br>
+      de madres que añoran, de niños sin infancia.<br>
+      Lejos de casa, las voces se cruzan,<br>
+      sueños de reencuentro que el tiempo rehúsa.<br><br>
+
+      <br>
+      Los años pasaron, los niños crecieron,<br>
+      con recuerdos de un sol que nunca volvieron.<br>
+      Algunos fueron, otros se quedaron,<br>
+      en tierras lejanas donde todo cambiaron.<br><br>
+
+      <br>
+      Niños de Rusia, estrellas en el cielo,<br>
+      sus pasos en la nieve, susurran sin miedo.<br>
+      Aunque lejos estén, sus raíces vendrán,<br>
+      a la tierra que un día juraron amar.<br><br>
+
+      <br>
+      Ahora en sus ojos, un brillo de historia,<br>
+      cicatrices guardadas, un eco en la memoria.<br>
+      La patria lejana, siempre los llamó,<br>
+      aunque el tiempo y la vida los separó.<br><br>
+
+      <br>
+      Niños de Rusia, almas sin final,<br>
+      en sus corazones, España y su mar.<br>
+      De tierras lejanas siempre soñarán,<br>
+      el retorno a la patria que nunca olvidarán.<br><br>
+
+    <br>
+      Niños de España, aunque lejos estén,<br>
+      sus voces resuenan como un viejo laúd.<br>
+      Y en cada suspiro, en cada mirar,<br>
+      llevan la promesa de un hogar por encontrar.
+    </p>
+  </div>
+
+  <div class="video-info historia">
+    <p><strong>Historia:</strong> Se denomina “Niños de Rusia” a los miles de menores de edad enviados al exilio durante la Guerra Civil Española, especialmente entre 1937 y 1938, desde la zona republicana hacia la Unión Soviética. En total fueron evacuados unos 3.000 niños, principalmente vascos y asturianos. Muchos no volvieron jamás. Solo en 2005 el Estado español reconoció públicamente su sufrimiento y les concedió una pensión, cuando la mayoría ya había fallecido. Esta canción es un homenaje a ellos.</p>
+  </div>
+</div>
+
+
     </section>
   </main>
 
