--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="apple-touch-icon" sizes="512x512" href="assets/logo-512.png">
+  <link rel="icon" type="image/png" href="assets/logo-512.png">
+
 
   <!-- Google AdSense -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8208696639870988" crossorigin="anonymous"></script>
