--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
   <link rel="apple-touch-icon" sizes="512x512" href="assets/logo-512.png">
   <link rel="icon" type="image/png" href="assets/logo-512.png">
+  <link rel="manifest" href="manifest.json">
+
 
 
   <!-- Google AdSense -->
