--- a/index.html
+++ b/index.html
@@ -581,5 +581,13 @@
 </footer>
 
 </body>
+<script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('service-worker.js')
+      .then(reg => console.log('Service Worker registrado:', reg))
+      .catch(err => console.error('Error al registrar Service Worker:', err));
+  }
+</script>
+
 </html>
 
