--- a/index.html
+++ b/index.html
@@ -580,14 +580,20 @@
   <p><a href="politica.html">Política de Privacidad y Derechos de Autor</a></p>
 </footer>
 
-</body>
+
+
+
 <script>
   if ('serviceWorker' in navigator) {
     navigator.serviceWorker.register('service-worker.js')
-      .then(reg => console.log('Service Worker registrado:', reg))
-      .catch(err => console.error('Error al registrar Service Worker:', err));
+      .then(reg => console.log('Service Worker registrado', reg))
+      .catch(err => console.error('Error al registrar Service Worker', err));
   }
 </script>
+
+</body>
+
+
 
 </html>
 
