--- a/index.html
+++ b/index.html
@@ -563,9 +563,51 @@
 </div>
 
 
+  
+  <div class="video-item">
+  <iframe src="https://youtu.be/KorV8HIg17g" frameborder="0" allowfullscreen></iframe>
 
-    </section>
-  </main>
+  <div class="video-buttons">
+    <button onclick="toggleSection(this, 'letra')">Letra</button>
+    <button onclick="toggleSection(this, 'historia')">Historia</button>
+  </div>
+
+  <div class="video-info letra">
+    <h3>Apalabrados por el destino</h3>
+    <p>
+      Volaron nuestros sueños, pero te sueño siempre.<br>
+      Eres la ausencia que está siempre presente.<br>
+      Mi bruja bailarina, mi mar, mi fuego ardiente.<br>
+      Mi manchega de alma firme, mi bruja, mi gran dolor.<br>
+      Fuiste madre como nadie, con coraje y con valor.<br>
+      Te tocó ser padre a veces, sin quejarte, sin rencor.<br>
+      Y lo diste todo siempre, con sonrisas, con amor.<br><br>
+
+      Volaron nuestros sueños, pero te sueño siempre.<br>
+      Eres la ausencia que está siempre presente.<br>
+      Mi bruja bailarina, mi mar, mi fuego ardiente.<br><br>
+
+      “Mi nene, mi riojano”… el recuerdo de su voz<br>
+      me susurra, no lo olvido, me acaricia el corazón.<br><br>
+
+      Volaron nuestros sueños, pero te sueño siempre.<br>
+      Eres la ausencia que está siempre presente.<br>
+      Mi bruja bailarina, mi mar, mi fuego ardiente.
+    </p>
+  </div>
+
+  <div class="video-info historia">
+    <h3>Historia de Apalabrados por el destino</h3>
+    <p>
+      Esta canción fue compuesta con los recuerdos y sentimientos de mi amigo Larry, quien perdió a su gran amor, Mar. Se conocieron en enero de 2014 jugando al juego <strong>Apalabrados</strong>, y desde entonces compartieron un vínculo único.<br><br>
+      Mar, manchega de alma firme, lo llamaba “mi nene, mi riojano”; él, con cariño, la llamaba “mi bruja”. Mar se fue en 2025, pero nunca se fue del todo. Esta canción está hecha con sus recuerdos, sus lágrimas... y también las mías.
+    </p>
+  </div>
+</div>
+
+
+  </section>
+</main>
 
   <script src="main.js"></script>
 <footer class="main-footer">
