--- a/index.html
+++ b/index.html
@@ -563,10 +563,9 @@
 </div>
 
 
-  
   <div class="video-item">
-  <iframe src="https://youtu.be/KorV8HIg17g" frameborder="0" allowfullscreen></iframe>
-
+  <iframe src="https://youtu.be/KorV8HIg17g" title="Apalabrados por el destino" allowfullscreen></iframe>
+  
   <div class="video-buttons">
     <button onclick="toggleSection(this, 'letra')">Letra</button>
     <button onclick="toggleSection(this, 'historia')">Historia</button>
@@ -605,9 +604,8 @@
   </div>
 </div>
 
-
-  </section>
-</main>
+        </section>
+      </main>
 
   <script src="main.js"></script>
 <footer class="main-footer">
