--- a/index.html
+++ b/index.html
@@ -564,8 +564,7 @@
 
 
   <div class="video-item">
-  <iframe src="https://youtu.be/KorV8HIg17g" title="Apalabrados por el destino" allowfullscreen></iframe>
-  
+ <iframe src="https://www.youtube.com/embed/KorV8HIg17g" title="Apalabrados por el destino" allowfullscreen></iframe>
   <div class="video-buttons">
     <button onclick="toggleSection(this, 'letra')">Letra</button>
     <button onclick="toggleSection(this, 'historia')">Historia</button>
