--- a/index.html
+++ b/index.html
@@ -602,6 +602,66 @@
     </p>
   </div>
 </div>
+<div class="video-item">
+  <iframe src="https://www.youtube.com/embed/ojqj0ptFzQc" title="Soldado de Castilla (Folk Taberna)" allowfullscreen></iframe>
+
+  <div class="video-buttons">
+    <button onclick="toggleSection(this, 'letra')">Letra</button>
+    <button onclick="toggleSection(this, 'historia')">Historia</button>
+  </div>
+
+  <div class="video-info letra">
+    <h3>Soldado de Castilla (Folk Taberna)</h3>
+    <p>
+      Por los campos de Castilla, bajo el sol ardiente,<br>
+      un soldado marcha firme, con su alma valiente.<br>
+      El acero en su cintura, su fe en el corazón,<br>
+      en la guerra busca gloria, en la vida, redención.<br><br>
+
+      ¡Oh, brindemos en la taberna, con el vino y esta canción!<br>
+      Que la luna le guíe, que el sol le dé calor,<br>
+      que vuelva sano a su casa, que reencuentre su amor.<br><br>
+
+      De su aldea lleva el eco, los suspiros de su amor,<br>
+      un pañuelo entre sus manos, su amuleto protector.<br>
+      No teme a las espadas, ni al rugir del cañón,<br>
+      su alma canta a la patria, y al honor su oración.<br><br>
+
+      ¡Oh, brindemos en la taberna, con el vino y esta canción!<br>
+      Que la luna le guíe, que el sol le dé calor,<br>
+      que vuelva sano a su casa, que reencuentre su amor.<br><br>
+
+      En la noche se alza el canto, de los lobos y la guerra,<br>
+      sabe que el alba lo encuentra, sobre sangre y bajo tierra.<br>
+      Mas en su pecho hay un fuego que jamás se apagará,<br>
+      el deber de un castellano, que su historia escribirá.<br><br>
+
+      ¡Oh, brindemos en la taberna, con el vino y esta canción!<br>
+      Que la luna le guíe, que el sol le dé calor,<br>
+      que vuelva sano a su casa, que reencuentre su amor.<br><br>
+
+      Cuando termine esta batalla, y regrese al hogar,<br>
+      al calor de su taberna, su historia contará.<br>
+      Y si el destino lo lleva, a no poder regresar,<br>
+      que su nombre quede escrito donde va a descansar.<br><br>
+
+      ¡Oh, brindemos en la taberna, con el vino y esta canción!<br>
+      Que la luna le guíe, que el sol le dé calor,<br>
+      que vuelva sano a su casa, que reencuentre su amor.
+    </p>
+  </div>
+
+  <div class="video-info historia">
+    <h3>Historia de Soldado de Castilla (Folk Taberna)</h3>
+    <p>
+      Esta es la versión original de la canción <strong>Soldado de Castilla</strong>, con un estilo más íntimo, folk y de taberna, 
+      pensada para evocar las noches de camaradería en posadas medievales. 
+      Fue la primera versión compuesta antes de realizar la adaptación rock. 
+      Aquí, la guitarra acústica y el tono narrativo transportan al oyente a un ambiente cálido, fraterno y nostálgico.
+    </p>
+  </div>
+</div>
+
 
         </section>
       </main>
