--- a/politica.html
+++ b/politica.html
@@ -6,6 +6,9 @@
   <title>Política de Privacidad - Sueño de Transilvania</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&display=swap" rel="stylesheet">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8208696639870988"
+     crossorigin="anonymous"></script>
+
 </head>
 <body>
   <header class="main-header">
@@ -38,7 +41,8 @@
     </section>
   </main>
 <footer class="footer">
-  <p>&copy; 2024 Sueño de Transilvania. Todos los derechos reservados.</p>
+  
+  
   <p><a href="politica.html">Política de Privacidad y Derechos de Autor</a></p>
 </footer>
 
