--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
   <!-- Google AdSense -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8208696639870988" crossorigin="anonymous"></script>
+  
 
   <!-- Estilos -->
   <link rel="stylesheet" href="style.css" />
@@ -661,6 +662,126 @@
     </p>
   </div>
 </div>
+<div class="video-item">
+  <iframe src="https://www.youtube.com/embed/pwizE7Bus5I" title="Sobre dos ruedas" allowfullscreen></iframe>
+
+  <div class="video-buttons">
+    <button onclick="toggleSection(this, 'letra')">Letra</button>
+    <button onclick="toggleSection(this, 'historia')">Historia</button>
+  </div>
+
+  <div class="video-info letra">
+    <h3>Sobre dos ruedas</h3>
+    <p>
+      La vida es un viaje, en moto arrancamos,<br>
+      desde el primer grito, el viento abrazamos.<br>
+      Sobre dos ruedas, sin mapa ni plan,<br>
+      buscando destinos, batallas que dar.<br><br>
+
+      Acelera, siente el pulso del motor,<br>
+      cada kilómetro, una historia de valor.<br>
+      Con victorias y caídas, con un poco dolor,<br>
+      la vida es un viaje, no pierdas el control.<br><br>
+
+      Montañas de logros, subimos sin miedo,<br>
+      la cima es un sueño, alcanzamos el cielo.<br>
+      Pero en cada curva, acecha el peligro,<br>
+      los fracasos nos golpean, nos hacen más vivos.<br><br>
+
+      Acelera, siente el pulso del motor,<br>
+      cada kilómetro, una historia de valor.<br>
+      Con victorias y caídas, con un poco dolor,<br>
+      la vida es un viaje, no pierdas el control.<br><br>
+
+      Amigos caídos, sus voces se apagan,<br>
+      como faros alumbran, el camino nos marcan.<br>
+      Otros se van, pero dejan su alma,<br>
+      en el eco del viento, nuestro amor nos reclaman.<br><br>
+
+      El final se acerca, el camino se estrecha,<br>
+      pero no nos rendimos, está cerca la meta.<br>
+      El final ha llegado, el destino sagrado,<br>
+      el viaje ha valido, lo vivido ha importado.<br><br>
+
+      Acelera, siente el pulso del motor,<br>
+      cada kilómetro, una historia de valor.<br>
+      Con victorias y caídas, con un poco dolor,<br>
+      la vida es un viaje, no pierdas el control.
+    </p>
+  </div>
+
+  <div class="video-info historia">
+    <h3>Historia de la canción</h3>
+    <p>
+      “Sobre dos ruedas” es más que una canción para moteros: es una metáfora de la vida misma. Cada kilómetro simboliza una etapa vivida, con sus triunfos y fracasos. Las curvas representan los desafíos inesperados; las caídas, nuestros errores y pérdidas; las aceleraciones, esos momentos en que nos atrevemos a ir más allá del miedo. <br><br>
+      Como en la carretera, en la vida no hay un mapa perfecto. A veces solo avanzamos con el viento en la cara y el corazón lleno de historias. Esta canción rinde homenaje a todos los que siguen adelante a pesar de las caídas, a los que perdieron amigos en el camino, pero siguen rodando con su recuerdo. Porque al final, lo importante no es llegar, sino cómo rodamos... y con quién.
+    </p>
+  </div>
+</div>
+<div class="video-item">
+  <iframe src="https://www.youtube.com/embed/m6GJitNgBoY" title="Rodando" allowfullscreen></iframe>
+
+  <div class="video-buttons">
+    <button onclick="toggleSection(this, 'letra')">Letra</button>
+    <button onclick="toggleSection(this, 'historia')">Historia</button>
+  </div>
+
+  <div class="video-info letra">
+    <h3>Rodando</h3>
+    <p>
+      Rodando, rodando<br>
+      Soñando despierto,<br>
+      rodando, rodando,<br>
+      hermano del viento.<br><br>
+
+      Sonrisas de luna,<br>
+      lágrimas del sol,<br>
+      le miran, le juzgan<br>
+      desde el retrovisor...<br><br>
+
+      Cicatrices viejas<br>
+      en su alma, en su piel,<br>
+      los recuerdos, el pasado<br>
+      que viajan con él.<br><br>
+
+      No hay rumbo fijo,<br>
+      solo viento y asfalto,<br>
+      su caballo de hierro,<br>
+      su rugido y su llanto...<br><br>
+
+      Rodando, rodando,<br>
+      soñando despierto,<br>
+      rodando, rodando,<br>
+      hermano del viento.<br><br>
+
+      Sonrisas de luna,<br>
+      lágrimas del sol,<br>
+      le miran, le juzgan<br>
+      desde el retrovisor...<br><br>
+
+      Rodando, rodando<br>
+      Es hijo del trueno,<br>
+      Su hierro lo lleva<br>
+      Su dragón de acero<br><br>
+
+      Lágrimas de luna<br>
+      Sonrisas del sol<br>
+      Su puño aprieta<br>
+      El acelerador.
+    </p>
+  </div>
+
+  <div class="video-info historia">
+    <h3>Historia de la canción</h3>
+    <p>
+      "Rodando" es un retrato poético del alma nómada. Representa a ese motero solitario que lleva en su piel las cicatrices del tiempo y en su corazón el peso de lo vivido. No busca un destino, sino que encuentra sentido en cada kilómetro, en cada ráfaga de viento que le golpea la cara.<br><br>
+      Su moto, su "dragón de acero", no es solo un vehículo: es su refugio, su cómplice y su única certeza. Rodar es su forma de escapar, pero también de sanar. En cada curva deja atrás un juicio, un recuerdo o un dolor. La luna lo mira con ternura, el sol le recuerda que sigue vivo.<br><br>
+      Esta canción es para todos los que encuentran libertad en el movimiento, que no buscan explicación, solo carretera. Para los que han aprendido a vivir con el retrovisor lleno de pasado... pero con la vista siempre al frente.
+    </p>
+  </div>
+</div>
+
+
 
 
         </section>
